Updated code with new changes

--- a/6thgrade.html
+++ b/6thgrade.html
@@ -25,11 +25,11 @@
  <title>Cybron Scout Grade 6 Certification – Cybron Security</title>
  <style>
   .color-2{
-    text-align:start !important;
+    text-align:justify !important;
     font-size: 15px;
   color:#8f8f8f !important;
 }
-    .aboutback{
+   .aboutback{
       background-color: #6095FF;
         /* background-image: url("assets/why.png"); */
         transform: scale(0.99.9) !important;
@@ -40,7 +40,11 @@
   background-repeat: no-repeat;
   background-attachment: fixed !important;
   height: 70vh;
-    }
+    } .color-2{
+    text-align:justify !important;
+    font-size: 15px;
+  color:#8f8f8f !important;
+}
     @keyframes progressAnimation {
       from {
         width: 0%;
@@ -111,7 +115,7 @@ background-size: cover;
     <nav class="navbar navbar-expand-lg px-0 py-0 container-fluid" id="navbar">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
-          <img src="assets/logo.png" alt="" class="col-lg-5 col-5" /> <!-- Replace with actual logo path -->
+          <img src="assets/logo.png" alt="" class="col-lg-6 col-5" /> <!-- Replace with actual logo path -->
         </a>
         <button class="btn d-lg-none navbar-expand-lg" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
           <i class="fa-solid fa-bars text-dark"></i>
@@ -422,29 +426,29 @@ Home / Cybron Scout Grade 6 Certification</h5>
 
     <!-- EXPERICNE SECTION END -->
 <!-- LEFT COL START-->
-<div class="container-fluid px-lg-4 d-flex flex-lg-row flex-column ">
-  <div class="col-lg-8 col-md-6 col-12">
+<div class="container-fluid px-lg-4 d-flex flex-lg-row flex-column justify-content-between">
+  <div class="col-lg-8 col-md-6 col-12 me-lg-3">
     <div class="col-12 ssdsd">
     <div class="d-flex flex-row align-items-center">
     <i class="fas fa-hand-point-right me-2 fs-4 text-white p-2 rounded-circle bg-col"></i>
      <h5 class="col-org ">Why to became cybron scouts</h5>
     </div>
     
-     <p class="color-2 pt-3">
+     <p class="color-2 pt-3 text-justify1 text-justify">
       In today’s rapidly evolving digital landscape, information security threats are growing in complexity and frequency. To stay ahead of these challenges, it is crucial to implement and manage robust information security systems and practices. Becoming a Cybron Scout Grade 6 empowers you to do just that by equipping you with the necessary knowledge and skills to tackle modern security threats effectively. 
 </p>
 <!--  -->
 
 <div class="ps-4 col-12">
-  <p class="color-2 col-11">
-<span class="fw-bold">   1. Tackle Growing Security Threats <br></span>
+  <p class="color-2 col-11 text-justify">
+<span class="fw-bold  text-justify">   1. Tackle Growing Security Threats <br></span>
 The digital world faces constant risks that require skilled professionals to mitigate and manage them. As a Cybron Scout Grade 6, you will gain expertise in implementing an advanced Information Security Management System (ISMS), tailored to counter the latest threats.
   </p>
 </div>
 
-<div class="ps-4 col-12">
+<div class="ps-4 col-12 text-justify">
   <p class="color-2 col-11">
-    <span class="fw-bold">2. Meet Industry Standards and Expectations</span>
+    <span class="fw-bold text-justify">2. Meet Industry Standards and Expectations</span>
     Information security is a critical requirement for businesses, customers, and other stakeholders. By becoming a Cybron Scout, you demonstrate your ability to implement effective security measures that align with industry standards and ensure the protection of sensitive information.</p>
 </div>
 
@@ -455,7 +459,7 @@ The digital world faces constant risks that require skilled professionals to mit
   <i class="fas fa-hand-point-right me-2 fs-4 text-white p-2 rounded-circle bg-col"></i>
    <h5 class="col-org">Benefits of program and prerequisites </h5>
   </div>
-   <p class="color-2 pt-3">
+   <p class="color-2 pt-3 text-justify1">
 As a technology is being used in our daily life and almost every individual and organizations are deeply involved in it, whereof the offices and market are using the information technology and getting the maximum advantage of it; the another challenges are raising up, which is pertaining to Cyber Security.  
 </p>
 
@@ -530,7 +534,8 @@ As a technology is being used in our daily life and almost every individual and 
 As a technology is being used in our daily life and almost every individual and organizations are deeply involved in it, whereof the offices and market are using the information technology and getting the maximum advantage of it; the another challenges are raising up, which is pertaining to Cyber Security.  
 </p>
 </div>
-  </div>
+
+</div>
   <div class="col-lg-4 col-md-6  col-12 ">
     <div class="mb-3 col-12 px-3 d-lg-flex  d-none flex-row justify-content-center align-items-center  py-5 color-2 border border-2 shadow-lg rounded-3 frameworkpic">
       <i class="fa-solid fa-eye diveye text-white">
@@ -649,13 +654,13 @@ As a technology is being used in our daily life and almost every individual and 
 <!-- FRAMEWORK -->
 <div class="container-fluid d-flex flex-lg-row flex-column my-5 py-5">
 
-  <div class="col-lg-4 grttt ">
-    <div class="col-lg-11 col-md-12 us us2 ">
+  <div class="col-lg-4 grttt  ">
+    <div class="col-lg-11 text-justify col-md-12 us us2 ">
      
       <div class="ushover ">
-     <h4 class="text-center pt-3 ">Cybron Framework</h4>
-   <div class="displaynone">
-     <h6 class="col-11 mx-auto fs-6 text-center py-3 mt-5">Cybron Framework explain about concept and challenges of cyber security , where it has been derived from NIST standards and guidelines. The framework also equipped the candidates from school level to professional level.</h6>
+     <h4 class="text-center pt-3 text-justify">Cybron Framework</h4>
+   <div class="displaynone text-justify" >
+     <h6 class="col-11 mx-auto fs-6 text-center py-3 mt-5 text-justify1">Cybron Framework explain about concept and challenges of cyber security , where it has been derived from NIST standards and guidelines. The framework also equipped the candidates from school level to professional level.</h6>
      <button class="mx-auto mt-3 btn3 col-10 p-3 shadow-lg d-flex  flex-row align-items-center col-org fw-bold fs-6 justify-content-center">
       Learn-More
       <i class="fa-solid fa-arrow-right icon-hover"></i>
@@ -685,7 +690,7 @@ As a technology is being used in our daily life and almost every individual and 
       <div class="ushover ">
         <h4 class="text-center pt-3 ">Cybron Framework</h4>
       <div class="displaynone">
-        <h5 class="col-11 mx-auto text-center fs-6  text-center py-3 mt-5">Cybron Syllabus is the details of each content and topics The syllabus is developed according to the recent challenges and threats of cyber security and give the concrete learning to all about digital safety and security.</h5>
+        <h5 class="col-11 mx-auto text-center fs-6  text-center py-3 mt-5 ">Cybron Syllabus is the details of each content and topics The syllabus is developed according to the recent challenges and threats of cyber security and give the concrete learning to all about digital safety and security.</h5>
         <button class="mx-auto mt-3 btn3 col-10 p-3 shadow-lg d-flex flex-row align-items-center col-org fw-bold fs-6 justify-content-center">
          Learn-More
          <i class="fa-solid fa-arrow-right icon-hover"></i>
