--- a/Trainers.html
+++ b/Trainers.html
@@ -23,7 +23,7 @@
 
  <title>Cybron Trainers – Cybron Security</title>
  <style>
-    .aboutback{
+   .aboutback{
       background-color: #6095FF;
         /* background-image: url("assets/why.png"); */
         transform: scale(0.99.9) !important;
@@ -34,7 +34,11 @@
   background-repeat: no-repeat;
   background-attachment: fixed !important;
   height: 70vh;
-    }
+    } .color-2{
+    text-align:justify !important;
+    font-size: 15px;
+  color:#8f8f8f !important;
+}
     @keyframes progressAnimation {
       from {
         width: 0%;
@@ -105,7 +109,7 @@ background-size: cover;
     <nav class="navbar navbar-expand-lg px-0 py-0 container-fluid" id="navbar">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
-          <img src="assets/logo.png" alt="" class="col-lg-5 col-5" /> <!-- Replace with actual logo path -->
+          <img src="assets/logo.png" alt="" class="col-lg-6 col-5" /> <!-- Replace with actual logo path -->
         </a>
         <button class="btn d-lg-none navbar-expand-lg" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
           <i class="fa-solid fa-bars text-dark"></i>
