--- a/certifications.html
+++ b/certifications.html
@@ -108,7 +108,7 @@ transition: 0.9s ease-in-out !important;
      <nav class="navbar navbar-expand-lg px-0 py-0 container-fluid" id="navbar">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
-          <img src="..assets/logo.png" alt="" class="col-lg-5 col-5" /> <!-- Replace with actual logo path -->
+          <img src="/assets/logo.png" alt="" class="col-lg-6 col-5" /> <!-- Replace with actual logo path -->
         </a>
         <button class="btn d-lg-none navbar-expand-lg" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
           <i class="fa-solid fa-bars text-white"></i>
@@ -356,7 +356,7 @@ Home / Certifications & Recognitions </h5>
         <div class="card-body col-11 mx-auto py-4">
             <i class="fa-solid fa-shapes fs-1 pb-3 col-org"></i>
             <h4 class="card-title ">Cybron Scout 6 Grade Certification</h4>
-            <p class="card-text py-4">Learn Cyber Security from grassroot level and understand the main crux of this subject. The curriculum has been designed according to the International Standards and requirement of the Global Market. Become a Cybron Scout Leader after Completion of this course.</p>
+            <p class="card-text py-4 ">Learn Cyber Security from grassroot level and understand the main crux of this subject. The curriculum has been designed according to the International Standards and requirement of the Global Market. Become a Cybron Scout Leader after Completion of this course.</p>
             <button class="mt-3 btn3 col-lg-6 shadow-lg fw-normal p-2 d-flex flex-row align-items-center justify-content-center">
                 
                 Cybron Leaders
