--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <nav class="navbar navbar-expand-lg px-0 py-0 container-fluid" id="navbar">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
-          <img src="assets/logo.png" alt="" class="col-lg-5 col-5" /> <!-- Replace with actual logo path -->
+          <img src="assets/logo.png" alt="" class="col-lg-6 col-5" /> <!-- Replace with actual logo path -->
         </a>
         <button class="btn d-lg-none navbar-expand-lg" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
           <i class="fa-solid fa-bars text-dark"></i>
@@ -335,7 +335,7 @@
         ></div>
         <div  class="position-absolute col-lg-7 px-4 col-12  text-white d-flex mt-5 pt-5 flex-column justify-content-start ">
          <h6 class="text-col text-und text-start text col-lg-12 "><b>DEVELOPING POSITIVE MINDSETS</b></h6>
-          <h2 class="text-col  text col-lg-12 mt-2 fw-bolder display-5">
+          <h2 class="text-col  text col-lg-12 mt-2 fw-bolder display-5 text-capitalize">
             Powerful Curriculum and
             mechanism & prospects to learn <span class="text-col">cyber security</span>
           </h2>
@@ -361,7 +361,7 @@
          <div  class="position-absolute col-lg-7 px-4 col-12  text-white d-flex mt-5 pt-5 flex-column justify-content-start ">
           <!-- <h5 class="mt-4 text-uppercase text-start">DEVELOPING POSITIVE MINDSETS</h5> -->
           <h6 class="text-col text-und text-start text col-lg-12 "><b>DEVELOPING POSITIVE MINDSETS</b></h6>
-          <h2 class="text-col  text col-lg-12 mt-2 fw-bolder display-5">
+          <h2 class="text-col  text col-lg-12 mt-2 fw-bolder display-5 text-capitalize">
             Powerful Curriculum and
             mechanism & prospects to learn <span class="text-col">cyber security</span>
           </h2>
@@ -456,7 +456,7 @@
     <!-- APPROACH SECTION START-->
      <div class="container-fluid px-4 d-flex flex-lg-row flex-md-row flex-column mt-4 my-5 py-5 aplomno">
     <div class="col-lg-6 col-md-6 d-flex flex-column">
-      <h4 class="mb-4 col-lg-6 col-12 text-start col-org">Our Approach</h4>
+      <h6 class="mb-4 col-lg-6 col-12  text-start col-org text-uppercase">Our Approach</h6>
       <h2 class="fs-1">Exclusive Technology to Provide IT Solutions & Services</h2>
 <p><span class="col-org display-6">25 </span>Years’ of Professional Training & <br> Consulting Experience</p>
 <span class="border-1 col-12 mt-4 "></span>
@@ -571,7 +571,7 @@ DISCOVER NOW
 <div class="container-fluid px-4   d-flex flex-lg-row flex-column  sucees-page my-5">
  
         <div class="col-lg-7 col-md-7 px-lg-4   d-flex py-5 flex-column align-items-lg-start align-items-center justify-content-center suc1">
-<h6 class="text-white">- Why Choose Us</h6>
+<h6 class="text-white text-uppercase">- Why Choose Us</h6>
 <h3 class="display-5 fw-bold col-lg-9 col-12  text-white  mt-3 text-lg-start text-center mb-lg-0 mb-5">
     We Have a Lot of Skills in Cyber Security
 </h3>
