Updated code with new changes

--- a/6thgrade.html
+++ b/6thgrade.html
@@ -69,10 +69,13 @@
          border-radius: 5px;
          background-color:#6095FF !important;
       animation: progressAnimation 12s ease-out infinite;
-    }.whycol-11{
+    }
+    .whycol-11{
   height: 100vh;
   background-position: center;
-  background-image: url("assets/evulation_4.png");
+  background-image: url("assets/evulation_4.png") !important;
+  /* background-image: url("../cybron1/assets/evulation_4.png"); */
+  /* background-image: url("/assets/evulation_4.png") !important; */
 object-fit: cover;
 background-size: cover;
 }
