--- a/Application.html
+++ b/Application.html
@@ -35,6 +35,13 @@
       background-attachment: fixed !important;
       height: 70vh;
     }
+    .whycol-11{
+  height: 100vh;
+  background-position: center;
+  background-image: url("../cybron1/assets/evulation_4.png") !important;
+object-fit: cover;
+background-size: cover;
+}
     .color-2{
     text-align:justify !important;
     font-size: 15px;
