--- a/assessment.html
+++ b/assessment.html
@@ -356,10 +356,10 @@ You are the good assessors of your goodself</h5>
 
       <div class="container-fluid">
         <div class="col-11 mx-auto pic d-flex flex-row justify-content-center align-items-center position-relative">
-          <button class="mt-3 btn3 col-lg-2 p-2 d-flex flex-row align-items-center justify-content-center">
+          <!-- <button class="mt-3 btn3 col-lg-2 p-2 d-flex flex-row align-items-center justify-content-center">
 SEE MORE
             <i class="fa-solid fa-arrow-right icon-hover"></i>
-          </button>
+          </button> -->
 
         </div>
       </div>
