--- a/framework.html
+++ b/framework.html
@@ -36,7 +36,8 @@
     }
     .fr{
         background-image: url("assets/framework.jpg");
-        height: 100vh;
+        height: 87vh;
+        width: 100%;
         background-size: cover;
         object-fit: cover;
 position: relative;
@@ -338,8 +339,8 @@ Home / Cybron Framework </h5>
 <h2 class="fs-1 text-center col-lg-12 col-10 mx-auto py-4">Learning <span class="col-org " > Framework of Cybron</span></h2>
 
 <!-- FRAMEWORK -->
-<div class="container-fluid my-5 ">
-<div class="col-12 mx-auto fr">
+<div class="container my-5 ">
+<div class="col-8 mx-auto fr">
 
 </div>
 </div>
