Updated code with new changes

--- a/why.html
+++ b/why.html
@@ -25,7 +25,7 @@
  <title>Why choose us – Cybron Security</title>
  <style>
     .aboutback{
-        background-image: url("assets/why.png");
+        background-image: url("assets/why.png") !important;
         transform: scale(0.99.9) !important;
   transition: 6.9s ease-in-out !important;
   background-position: center !important;
@@ -35,6 +35,15 @@
   background-attachment: fixed !important;
   height: 70vh;
     }
+    .whycol-1{
+  height: 100vh;
+  background-position: center;
+  background-image: url("assets/evulation_4.png") !important;
+  /* background-image: url("../cybron1/assets/evulation_4.png"); */
+  /* background-image: url("/assets/evulation_4.png") !important; */
+object-fit: cover;
+background-size: cover;
+}
     @keyframes progressAnimation {
       from {
         width: 0%;
