Updated code with new changes

--- a/Application.html
+++ b/Application.html
@@ -477,24 +477,17 @@ The digital world faces constant risks that require skilled professionals to mit
   <i class="fas fa-hand-point-right me-2 fs-4 text-white p-2 rounded-circle bg-col"></i>
    <h5 class="col-org">Benefits of program and prerequisites </h5>
   </div>
-   <p class="color-2 pt-3 text-justify1">
-As a technology is being used in our daily life and almost every individual and organizations are deeply involved in it, whereof the offices and market are using the information technology and getting the maximum advantage of it; the another challenges are raising up, which is pertaining to Cyber Security.  
-</p>
 
-<div class="ps-4 col-12">
+
+<div class="ps-2 col-12 pt-3">
   <p class="color-2 col-11">
-  <span class="fw-bold">1. Enhanced Knowledge and Skills <br></span>
-  Gain a deep understanding of advanced information security practices.
-  Learn to design, implement, and manage an Information Security Management System (ISMS).
-  Acquire expertise in addressing modern security challenges effectively. </p>
+  <span class="">1. School candidate from class 6th grade can opt this certification</span>
+  <br><span class="">2. The content of the program will develop the skillset of candidate during their studies </span>
+  <br><span class="">3. Everyone know about latest scams and threats regarding cybercrimes, this course will help a lot</span>
+  <br><span class="">4. Get the Cybron Scout 6th Grade Certification in One year</span>
+ 
 </div>
-<div class="ps-4">
-  <p class="color-2 col-11">
-    <span class="fw-bold">2. Career Advancement <br></span>
-    Stand out in the competitive job market with specialized knowledge and skills.
-    Unlock opportunities for leadership roles in information security and management.
-    Build a strong professional reputation as a Cybron Scout.
-    </div>
+
 </div> 
    <div class="col-12">
   <div class="d-flex flex-row align-items-center">
@@ -502,8 +495,12 @@ As a technology is being used in our daily life and almost every individual and 
    <h5 class="col-org">Cybron framework and description </h5>
   </div>
    <p class="color-2 pt-3">
-As a technology is being used in our daily life and almost every individual and organizations are deeply involved in it, whereof the offices and market are using the information technology and getting the maximum advantage of it; the another challenges are raising up, which is pertaining to Cyber Security.  
+    The CYBRON framework has been influenced by the International standard NIST USA and it has been further elaborated as per the research. The philosophy behind regarding this framework that organization and industries are implementing lots of security tools and monitoring systems to secure their mechanism, data, system and technology from the unwanted people. But after spending the huge investments, nobody is 100% sure that they are secure and protected from different threats, attacks and risks. 
 </p>
+<p class="color-2 pt-3">
+  In this context, our research team under the supervision of Dr. M. Shaheer Waqar has found that it is the pure game of the mind-set, because if the people can understand, how these technologies are helpful and beneficial for their lives, so they cannot sabotage or harm it. But we cannot stop the negative mind-set people who never do positive work for the mankind. </p>
+<p class="color-2 pt-3">
+  Therefore, this framework has been established according to the aforementioned scenarios, and the knowledge set is established from the class 6 grade standard and providing them the required information according to their level about the cyber security.  Hence! When from class 6 grades students understand about the pros and cons of the cyber security threats and its challenges and progressively they learn up to date content with positive mindset and understand latest technologies and their impacts. So they are not going to harm or destroy it. Therefore, after using this training methodology, we are hopeful that CYBRON can change the mindsets as well as secure our societies industries and countries. </p>
 <!-- stucture -->
  
  <!-- strucutre -->
@@ -513,16 +510,72 @@ As a technology is being used in our daily life and almost every individual and 
   <i class="fas fa-hand-point-right me-2 fs-4 text-white p-2 rounded-circle bg-col"></i>
    <h5 class="col-org">Program Structure </h5>
   </div>
-   <p class="color-2 pt-3">
-As a technology is being used in our daily life and almost every individual and organizations are deeply involved in it, whereof the offices and market are using the information technology and getting the maximum advantage of it; the another challenges are raising up, which is pertaining to Cyber Security.  
-</p>
-</div>    <div class="col-12">
+  <div class="container mt-2">
+    <table class="table table-bordered">
+      <thead class="bg-col text-white text-center">
+        <tr>
+          <th>Category</th>
+          <th>Details</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Total Lectures</td>
+          <td>10</td>
+        </tr>
+        <tr>
+          <td>Online Lectures</td>
+          <td>Available on LMS</td>
+        </tr>
+        <tr>
+          <td>Accredited Trainers</td>
+          <td>Can Deliver the lectures</td>
+        </tr>
+        <tr>
+          <td>Each Lecture Duration</td>
+          <td>2 hours</td>
+        </tr>
+        <tr>
+          <td>Required Lectures to Complete to class 6th Standard</td>
+          <td>10</td>
+        </tr>
+        <tr>
+          <td>One Credit Hour</td>
+          <td>10 Learning Hours</td>
+        </tr>
+        <tr>
+          <td>Total Credits Required</td>
+          <td>2 Credit Hours</td>
+        </tr>
+        <tr>
+          <td>Total Time to complete to class 6th Standard</td>
+          <td>One Year</td>
+        </tr>
+        <tr>
+          <td>Assessment</td>
+          <td>Online / Paper based</td>
+        </tr>
+        <tr>
+          <td>Passing Criteria</td>
+          <td>70 percent</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+  
+</div>   
+ <div class="col-12">
   <div class="d-flex flex-row align-items-center">
   <i class="fas fa-hand-point-right me-2 fs-4 text-white p-2 rounded-circle bg-col"></i>
    <h5 class="col-org">Domain and task knowledge areas </h5>
   </div>
    <p class="color-2 pt-3">
-As a technology is being used in our daily life and almost every individual and organizations are deeply involved in it, whereof the offices and market are using the information technology and getting the maximum advantage of it; the another challenges are raising up, which is pertaining to Cyber Security.  
+    In this document you will find an updated structure for the CYBRON SCOUT Class 6th Standard Examination Content. Based on Experience Consultants and stakeholders, we have devised and simplifying the format so that the CYBRON SCOUT is easier to understand and interpret. </p>
+<h6><b>The domain and task are well defined on the following pages:</b></h6>
+<p class="pt-3 color-2"><b>Domain:</b> Defined as the high-level knowledge area that is essential to the practice of Cyber Security. </p> 
+<p class="color-2"><b>Tasks:</b>The underlying responsibilities of the cyber security team member within each domain area. </p> 
+<p class="pt-2 color-2">
+  Each CYBRON SCOUT Course examination will include all tasks for a domain, and CYBRON SCOUT will adhere to the percentage of coverage at the domain level as outlined in the further pages. 
 </p>
 </div>  
   <div class="col-12">
@@ -531,17 +584,48 @@ As a technology is being used in our daily life and almost every individual and 
    <h5 class="col-org">Assessment and program</h5>
   </div>
    <p class="color-2 pt-3">
-As a technology is being used in our daily life and almost every individual and organizations are deeply involved in it, whereof the offices and market are using the information technology and getting the maximum advantage of it; the another challenges are raising up, which is pertaining to Cyber Security.  
-</p>
+    <span class="">1. School candidate from class 6th grade can opt this certification</span>
+    <br><span class="">2. 	The paper will be online including practical and theory.  </span>
+    <br><span class="">3.	The weightage of examination will be 70% practical, and 30% theoretical.</span>
+    <br><span class="">4. 	Practical assessment will be taken in labs assess by internal examiners, where theory paper will be taken through online or paper based (if online facility not available)   </span>
+   <br> <span class="">5. 	Those candidate who cannot be able to give the online test and they do not have a facility, Therefore, their papers will be taken a paper based examination. Otherwise, center must have the facility to provide online test mechanism to students and facilitate for the final assessment.</span>
+    <br><span class="">6. 	Assessment will be done according to domain and tasks defined above through our online methodology  </span>
+   <h6 class="col-org fw-bold">EVALUATION AND GRADING</h6>
+    <span class="color-2">7.	The performance of students is evaluated through continuous observation of a student’s performance in the class participation, submission of assignments, quizzes and exercises. </span>
+    <br><span class="color-2">8. The student will be examined through exams conducted by CYBRON INTERNATIONAL. Total marks for passing the CERTIFICATION/DIPLOMA will be 70 out of a total of 100.</span>
+     
+  </p>
+
 </div>   
  <div class="col-12">
   <div class="d-flex flex-row align-items-center">
   <i class="fas fa-hand-point-right me-2 fs-4 text-white p-2 rounded-circle bg-col"></i>
    <h5 class="col-org">Reg and payment process and fee of the program </h5>
   </div>
-   <p class="color-2 pt-3">
-As a technology is being used in our daily life and almost every individual and organizations are deeply involved in it, whereof the offices and market are using the information technology and getting the maximum advantage of it; the another challenges are raising up, which is pertaining to Cyber Security.  
-</p>
+  <h6 class="col-org pt-3 fw-bold">CYBRON SCOUT ELIGIBILITY REQUIREMENTS </h6>
+
+  <table class="table table-bordered">
+    <thead class="bg-col text-white text-center">
+      <tr>
+        <th>Educational Background </th>
+        <th>Cybron Diploma</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>No Educational Background Required 	Must be earned from our any partner institute about 2 Credit hours </td>
+        <td>Must be earned from our any partner institute about 2 Credit hours  </td>
+      </tr>
+  
+    </tbody>
+  </table>
+  <h5 class="col-org">REGISTRATION PROCESS </h5>
+  <p class="pt-2 color-2">
+    Registration of the program is to be completed through our registered partners </p>
+  <h5 class="col-org">PROGRAM BIFURCATION  </h5>
+  <p class="color-2 pt-2">
+    The program is bifurcated into 12 months where each month, you have to complete the contents and submit your assignments in time to your concern school or any accredited trainer. 
+  </p>
 </div>
     <div class="col-12">
   <div class="d-flex flex-row align-items-center">
@@ -549,9 +633,20 @@ As a technology is being used in our daily life and almost every individual and 
    <h5 class="col-org">Continuing educational requirements</h5>
   </div>
    <p class="color-2 pt-3">
-As a technology is being used in our daily life and almost every individual and organizations are deeply involved in it, whereof the offices and market are using the information technology and getting the maximum advantage of it; the another challenges are raising up, which is pertaining to Cyber Security.  
-</p>
-</div>
+    CER—Continuing Educational Requirements Program is important and supports the ongoing educational and professional development of any candidate. Therefore, Cybron International insists on keeping up with its current market requirements. You have to prepare to meet the demands of the market today due to the most complex and competitive environment of businesses. </p>
+    <p class="color-2 pt-3">
+      <span class="">1. School candidate from class 6th grade can opt this certification</span>
+      <br><span class="">2. 	The paper will be online including practical and theory.  </span>
+      <br><span class="">3.	The weightage of examination will be 70% practical, and 30% theoretical.</span>
+      <br><span class="">4. 	Practical assessment will be taken in labs assess by internal examiners, where theory paper will be taken through online or paper based (if online facility not available)   </span>
+     <br> <span class="">5. 	Those candidate who cannot be able to give the online test and they do not have a facility, Therefore, their papers will be taken a paper based examination. Otherwise, center must have the facility to provide online test mechanism to students and facilitate for the final assessment.</span>
+      <br><span class="">6. 	Assessment will be done according to domain and tasks defined above through our online methodology  </span>
+     <h6 class="col-org fw-bold">EVALUATION AND GRADING</h6>
+      <span class="color-2">1.	The performance of students is evaluated through continuous observation of a student’s performance in the class participation, submission of assignments, quizzes and exercises. </span>
+      <br><span class="color-2">2. The student will be examined through exams conducted by CYBRON INTERNATIONAL. Total marks for passing the CERTIFICATION/DIPLOMA will be 70 out of a total of 100.</span>
+       
+    </p>
+  </div>
 
 </div>
   <div class="col-lg-4 col-md-6  col-12 ">
@@ -562,11 +657,11 @@ As a technology is being used in our daily life and almost every individual and 
   
   </div>
   <div class="mb-3 col-12 px-3  py-5 color-2 shadow-lg border border-2 rounded-3">
-    <h4 class="text-center pb-4 text-dark">Additional Information</h4>
-    <p>Training Days : <span class="fw-normal text-dark">2</span></p>
-    <p>CPD Certification (Credits) : <span class="fw-normal text-dark">12</span></p>
-    <p>Exam Duration : <span class="fw-normal text-dark">2 Hour</span></p>
-    <p>Retake Exam : <span class="fw-normal text-dark">Yes</span></p>
+    <h4 class="text-center pb-4 text-dark">Process Of The Program</h4>
+    <p>Total Credentials : <span class="fw-normal text-dark">2 Credit Hours</span></p>
+    <p class="text-capitalize"> one credit hour: <span class="fw-normal text-end text-dark">10 learning hours</span></p>
+    <p>completion of 10 Courses : <span class="fw-normal text-dark">cybron scout for class 6th standard</span></p>
+    <p>Final Assessment                                    : <span class="fw-normal text-dark">Online or physical assessment can be taken </span></p>
 
   </div>
   <div class="mb-3 col-12 px-3  py-5 color-2 border border-2 shadow-lg rounded-3">
