Updated code with new changes

--- a/index.html
+++ b/index.html
@@ -61,17 +61,17 @@
 
     </div>
     <div class="col-3"></div>
-    <div class="col-1 d-flex justify-content-around align-items-center">
+    <div class="col-1 d-flex justify-content-around icon align-items-center">
       <a href="https://twitter.com" target="_blank">
         <i class="fa-brands fa-twitter text-white"></i>
       </a>
-      <a href="https://facebook.com" target="_blank">
+      <a href="https://www.facebook.com/cybroninternational" target="_blank">
         <i class="fa-brands fa-facebook-f text-white"></i>
       </a>
-      <a href="https://instagram.com" target="_blank">
-        <i class="fa-brands fa-instagram text-white"></i>
+      <a href="https://www.youtube.com/" target="_blank">
+        <i class="fa-brands fa-youtube text-white"></i>
       </a>
-      <a href="https://linkedin.com" target="_blank">
+      <a href="https://www.linkedin.com/company/cybron-international" target="_blank">
         <i class="fa-brands fa-linkedin text-white"></i>
       </a>
     </div>
@@ -1050,11 +1050,11 @@
         <div class="col-lg-3 col-md-6 mb-4">
           <h5 class="mb-3">Cybron Services</h5>
           <ul class="list-unstyled">
-            <li><a href="#" class="text-dark text-decoration-none">About Cybron</a></li>
-            <li><a href="#" class="text-dark text-decoration-none">Memberships</a></li>
-            <li><a href="#" class="text-dark text-decoration-none">Certifications</a></li>
-            <li><a href="#" class="text-dark text-decoration-none">Partners</a></li>
-            <li><a href="#" class="text-dark text-decoration-none">Trainers</a></li>
+            <li><a href="about.html" class="text-dark text-decoration-none">About Cybron</a></li>
+            <li><a href="ScoutMemberships.html" class="text-dark text-decoration-none">Memberships</a></li>
+            <li><a href="certifications.html" class="text-dark text-decoration-none">Certifications</a></li>
+            <li><a href="Partners.html" class="text-dark text-decoration-none">Partners</a></li>
+            <li><a href="Trainers.html" class="text-dark text-decoration-none">Trainers</a></li>
           </ul>
         </div>
 
@@ -1062,11 +1062,11 @@
         <div class="col-lg-3 col-md-6 mb-4">
           <h5 class="mb-3">Quick Links</h5>
           <ul class="list-unstyled">
-            <li><a href="#" class="text-dark text-decoration-none">Enroll Your School</a></li>
-            <li><a href="#" class="text-dark text-decoration-none">Self Enrollment Process</a></li>
-            <li><a href="#" class="text-dark text-decoration-none">Terms of Payment</a></li>
-            <li><a href="#" class="text-dark text-decoration-none">Privacy Policy</a></li>
-            <li><a href="#" class="text-dark text-decoration-none">Where to Find Us</a></li>
+            <li><a href="BecomePartner.html" class="text-dark text-decoration-none">Enroll Your School</a></li>
+            <li><a href="BecomeTrainer.html" class="text-dark text-decoration-none">Self Enrollment Process</a></li>
+            <li><a href="index.html" class="text-dark text-decoration-none">Terms of Payment</a></li>
+            <li><a href="index.html" class="text-dark text-decoration-none">Privacy Policy</a></li>
+            <li><a href="index.html" class="text-dark text-decoration-none">Where to Find Us</a></li>
           </ul>
         </div>
 
@@ -1074,11 +1074,11 @@
         <div class="col-lg-3 col-md-6 mb-4">
           <h5 class="mb-3">Support</h5>
           <ul class="list-unstyled">
-            <li><a href="#" class="text-dark text-decoration-none">Email Us</a></li>
-            <li><a href="#" class="text-dark text-decoration-none">Pricing and Plans</a></li>
-            <li><a href="#" class="text-dark text-decoration-none">Contact Us</a></li>
-            <li><a href="#" class="text-dark text-decoration-none">Cookies Policy</a></li>
-            <li><a href="#" class="text-dark text-decoration-none">Help & FAQ</a></li>
+            <li><a href="mailto:cybron@cybroninternational.com" class="text-dark text-decoration-none">Email Us</a></li>
+            <li><a href="about.html" class="text-dark text-decoration-none">Pricing and Plans</a></li>
+            <li><a href="contact.html" class="text-dark text-decoration-none">Contact Us</a></li>
+            <li><a href="index.html" class="text-dark text-decoration-none">Cookies Policy</a></li>
+            <li><a href="index.html" class="text-dark text-decoration-none">Help & FAQ</a></li>
           </ul>
           <!-- <div class="d-flex gap-2 mt-3">
             <a href="#"><img src="path-to-google-play.png" alt="Google Play" class="img-fluid" style="max-width: 120px;"></a>
@@ -1088,14 +1088,7 @@
       </div>
 
       <!-- Footer Bottom -->
-      <div class="text-center mt-4 d-flex  flex-column justify-content-center justify-content-lg-between">
-        <div class="d-flex justify-content-center pb-3 mt-2">
-          <a href="#" class="text-white mx-2"><i class="fab fa-twitter"></i></a>
-          <a href="#" class="text-white mx-2"><i class="fab fa-facebook"></i></a>
-          <a href="#" class="text-white mx-2"><i class="fab fa-instagram"></i></a>
-          <a href="#" class="text-white mx-2"><i class="fab fa-linkedin"></i></a>
-        </div>
-      </div>
+
     </div>
     <p class="mb-0 mx-auto bg-col text-white container-fluid p-3 text-center">© 2024 Cybron International. All Rights
       Reserved</p>
