--- a/7thgrade.html
+++ b/7thgrade.html
@@ -83,29 +83,60 @@ background-size: cover;
 
 <body>
     <!-- TOP -->
-    <div
+ <div
     class="animate__fadeIn py-3 px-4 d-none container-fluid d-lg-flex flex-lg-row justify-content-lg-center align-items-lg-center bg-transparent position-absolute container-fluid top">
-    <div class="col-4 d-flex align-items-center justify-content-start  ps-2"> <swiper-container
-        class="text-startt mySwiper d-flex justify-content-start text-start align-items-center" space-between="30"
-        autoplay-delay="3500"> <swiper-slide class=" col-12 d-flex justify-content-lg-start align-items-center"> <i
-            class="fa-solid span-head fa-location-dot pe-2"></i> <span class="span-head  text-col"> England LU2 7BP SIC
-            codes, 62012 United Kingdom </span> </swiper-slide> <swiper-slide
-          class=" col-12 d-flex  justify-content-lg-start align-items-center"> <i
-            class="fa-solid fa-phone pe-2 span-head"></i> <span class="span-head pe-3">44 7783530138</span>
-        </swiper-slide> <swiper-slide class=" col-12 d-flex  justify-content-lg-start align-items-center"> <i
-            class="fa-solid fa-clock pe-2 span-head"></i> <span class="span-head  text-col  pe-3 "> Mon-Fri (9.00 AM -
-            5.00 PM) </span> </swiper-slide> <swiper-slide
-          class=" col-12 d-flex  justify-content-lg-start align-items-center"> <i
-            class="fa fa-envelope pe-2 span-head"></i> <span class="span-head  text-col  pe-3 ">
-            contact@cybroninternational.com </span> </swiper-slide> </swiper-container> </div>
-    <div class="col-4 d-flex justify-content-center align-items-center"> </div>
+    <div class="col-4 d-flex align-items-center justify-content-start  ps-2">
+      <swiper-container class="text-startt mySwiper d-flex justify-content-start text-start align-items-center"
+        space-between="30" autoplay-delay="3500">
+        <swiper-slide class=" col-12 d-flex justify-content-lg-start align-items-center">
+          <i class="fa-solid span-head fa-location-dot pe-2"></i>
+          <span class="span-head  text-col">
+            England LU2 7BP SIC codes, 62012 United Kingdom
+          </span>
+
+        </swiper-slide>
+        <swiper-slide class=" col-12 d-flex  justify-content-lg-start align-items-center">
+          <i class="fa-solid fa-phone pe-2 span-head"></i>
+          <span class="span-head pe-3">44 7783530138</span>
+        </swiper-slide>
+        <swiper-slide class=" col-12 d-flex  justify-content-lg-start align-items-center">
+          <i class="fa-solid fa-clock pe-2 span-head"></i>
+          <span class="span-head  text-col  pe-3 ">
+            Mon-Fri (9.00 AM - 5.00 PM)
+          </span>
+        </swiper-slide>
+        <swiper-slide class=" col-12 d-flex  justify-content-lg-start align-items-center">
+          <i class="fa fa-envelope pe-2 span-head"></i>
+          <span class="span-head  text-col  pe-3 ">
+            contact@cybroninternational.com
+          </span>
+        </swiper-slide>
+
+      </swiper-container>
+    </div>
+    <div class="col-4 d-flex justify-content-center align-items-center">
+
+    </div>
     <div class="col-3"></div>
-    <div class="col-1 d-flex justify-content-around align-items-center"> <a href="https://twitter.com" target="_blank">
-        <i class="fa-brands fa-twitter text-white"></i> </a> <a href="https://facebook.com" target="_blank"> <i
-          class="fa-brands fa-facebook-f text-white"></i> </a> <a href="https://instagram.com" target="_blank"> <i
-          class="fa-brands fa-instagram text-white"></i> </a> <a href="https://linkedin.com" target="_blank"> <i
-          class="fa-brands fa-linkedin text-white"></i> </a> </div> <a href="#" class="topbtnfix"> <i
-        class="fa-solid fa-arrow-up"></i> </a>
+    <div class="col-1 d-flex justify-content-around icon align-items-center">
+      <a href="https://twitter.com" target="_blank">
+        <i class="fa-brands fa-twitter text-white"></i>
+      </a>
+      <a href="https://www.facebook.com/cybroninternational" target="_blank">
+        <i class="fa-brands fa-facebook-f text-white"></i>
+      </a>
+      <a href="https://www.youtube.com/" target="_blank">
+        <i class="fa-brands fa-youtube text-white"></i>
+      </a>
+      <a href="https://www.linkedin.com/company/cybron-international" target="_blank">
+        <i class="fa-brands fa-linkedin text-white"></i>
+      </a>
+    </div>
+    <a href="#" class="topbtnfix">
+
+      <i class="fa-solid fa-arrow-up"></i>
+
+    </a>
   </div>
   <!-- TOP -->
     <!-- NAVBAR -->
@@ -859,49 +890,50 @@ On this Subscription, you will get One Year access of all material, literature t
 
 
  <!-- FOOTER -->
-  <footer class=" pt-5">
+   <footer class=" pt-5">
     <div class="container-fluid px-4">
       <div class="row">
         <!-- Company Info -->
         <div class="col-lg-3 col-md-6 mb-4">
           <img src="assets/footerlogo.png" alt="Cybron Logo" class="mb-3 col-lg-10 m-0 p-0">
-          <p class="locte text-white">404 Old Bedford Road, Luton, England LU2 7BP<br>SIC codes — 62012 United Kingdom</p>
+          <p class="locte text-white">404 Old Bedford Road, Luton, England LU2 7BP<br>SIC codes — 62012 United Kingdom
+          </p>
           <p><a href="mailto:cybron@cybroninternational.com" class="text-white">cybron@cybroninternational.com</a></p>
         </div>
-  
+
         <!-- Cybron Services -->
         <div class="col-lg-3 col-md-6 mb-4">
           <h5 class="mb-3">Cybron Services</h5>
           <ul class="list-unstyled">
-            <li><a href="#" class="text-dark text-decoration-none">About Cybron</a></li>
-            <li><a href="#" class="text-dark text-decoration-none">Memberships</a></li>
-            <li><a href="#" class="text-dark text-decoration-none">Certifications</a></li>
-            <li><a href="#" class="text-dark text-decoration-none">Partners</a></li>
-            <li><a href="#" class="text-dark text-decoration-none">Trainers</a></li>
+            <li><a href="about.html" class="text-dark text-decoration-none">About Cybron</a></li>
+            <li><a href="ScoutMemberships.html" class="text-dark text-decoration-none">Memberships</a></li>
+            <li><a href="certifications.html" class="text-dark text-decoration-none">Certifications</a></li>
+            <li><a href="Partners.html" class="text-dark text-decoration-none">Partners</a></li>
+            <li><a href="Trainers.html" class="text-dark text-decoration-none">Trainers</a></li>
           </ul>
         </div>
-  
+
         <!-- Quick Links -->
         <div class="col-lg-3 col-md-6 mb-4">
           <h5 class="mb-3">Quick Links</h5>
           <ul class="list-unstyled">
-            <li><a href="#" class="text-dark text-decoration-none">Enroll Your School</a></li>
-            <li><a href="#" class="text-dark text-decoration-none">Self Enrollment Process</a></li>
-            <li><a href="#" class="text-dark text-decoration-none">Terms of Payment</a></li>
-            <li><a href="#" class="text-dark text-decoration-none">Privacy Policy</a></li>
-            <li><a href="#" class="text-dark text-decoration-none">Where to Find Us</a></li>
+            <li><a href="BecomePartner.html" class="text-dark text-decoration-none">Enroll Your School</a></li>
+            <li><a href="BecomeTrainer.html" class="text-dark text-decoration-none">Self Enrollment Process</a></li>
+            <li><a href="index.html" class="text-dark text-decoration-none">Terms of Payment</a></li>
+            <li><a href="index.html" class="text-dark text-decoration-none">Privacy Policy</a></li>
+            <li><a href="index.html" class="text-dark text-decoration-none">Where to Find Us</a></li>
           </ul>
         </div>
-  
+
         <!-- Support -->
         <div class="col-lg-3 col-md-6 mb-4">
           <h5 class="mb-3">Support</h5>
           <ul class="list-unstyled">
-            <li><a href="#" class="text-dark text-decoration-none">Email Us</a></li>
-            <li><a href="#" class="text-dark text-decoration-none">Pricing and Plans</a></li>
-            <li><a href="#" class="text-dark text-decoration-none">Contact Us</a></li>
-            <li><a href="#" class="text-dark text-decoration-none">Cookies Policy</a></li>
-            <li><a href="#" class="text-dark text-decoration-none">Help & FAQ</a></li>
+            <li><a href="mailto:cybron@cybroninternational.com" class="text-dark text-decoration-none">Email Us</a></li>
+            <li><a href="about.html" class="text-dark text-decoration-none">Pricing and Plans</a></li>
+            <li><a href="contact.html" class="text-dark text-decoration-none">Contact Us</a></li>
+            <li><a href="index.html" class="text-dark text-decoration-none">Cookies Policy</a></li>
+            <li><a href="index.html" class="text-dark text-decoration-none">Help & FAQ</a></li>
           </ul>
           <!-- <div class="d-flex gap-2 mt-3">
             <a href="#"><img src="path-to-google-play.png" alt="Google Play" class="img-fluid" style="max-width: 120px;"></a>
@@ -909,18 +941,12 @@ On this Subscription, you will get One Year access of all material, literature t
           </div> -->
         </div>
       </div>
-  
+
       <!-- Footer Bottom -->
-      <div class="text-center mt-4 d-flex  flex-column justify-content-center justify-content-lg-between">
-        <div class="d-flex justify-content-center pb-3 mt-2">
-          <a href="#" class="text-white mx-2"><i class="fab fa-twitter"></i></a>
-          <a href="#" class="text-white mx-2"><i class="fab fa-facebook"></i></a>
-          <a href="#" class="text-white mx-2"><i class="fab fa-instagram"></i></a>
-          <a href="#" class="text-white mx-2"><i class="fab fa-linkedin"></i></a>
-        </div>
-      </div>
+
     </div>
-    <p class="mb-0 mx-auto bg-col text-white container-fluid p-3 text-center">© 2024 Cybron International. All Rights Reserved</p>
+    <p class="mb-0 mx-auto bg-col text-white container-fluid p-3 text-center">© 2024 Cybron International. All Rights
+      Reserved</p>
   </footer>
   
  <!-- FOOTER -->
