--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-
+<style>
+  .back1{
+    background-image: url("assets/banner_6.png") !important;
+  }
+</style>
  <title>Contact– Cybron Security</title>
 </head>
 
