--- a/10thgrade.html
+++ b/10thgrade.html
@@ -93,6 +93,9 @@ background-size: cover;
 .frm{
   background-color: #6095FF;
 }
+.col-org{
+  font-weight: 700 !important;
+}
  </style>
 </head>
 
