--- a/Trainers.html
+++ b/Trainers.html
@@ -330,12 +330,12 @@ background-size: cover;
 
 
           <h6 class="dropdown-header">CYBRON SCOUT CERTIFICATIONS</h6>
-          <a class="dropdown-item nav-link" href="Get-Started/6thgrade.html">Cybron Scout Grade 6 Certification</a>
-                <a class="dropdown-item nav-link" href="Get-Started/7thgrade.html">Cybron Scout Grade 7 Certification</a>
-                <a class="dropdown-item nav-link" href="Get-Started/8thgrade.html">Cybron Scout Grade 8 Certification</a>
-                <a class="dropdown-item nav-link" href="Get-Started/9thgrade.html">Cybron Scout Grade 9 Certification</a>
-                <a class="dropdown-item nav-link" href="Get-Started/10thgrade.html">Cybron Scout Grade 10 Certification</a>
-                <a class="dropdown-item nav-link" href="Get-Started/diploma.html">Cybron Diploma</a>
+          <a class="dropdown-item nav-link" href=" 6thgrade.html">Cybron Scout Grade 6 Certification</a>
+                <a class="dropdown-item nav-link" href=" 7thgrade.html">Cybron Scout Grade 7 Certification</a>
+                <a class="dropdown-item nav-link" href=" 8thgrade.html">Cybron Scout Grade 8 Certification</a>
+                <a class="dropdown-item nav-link" href=" 9thgrade.html">Cybron Scout Grade 9 Certification</a>
+                <a class="dropdown-item nav-link" href=" 10thgrade.html">Cybron Scout Grade 10 Certification</a>
+                <a class="dropdown-item nav-link" href=" diploma.html">Cybron Diploma</a>
        
 
           <h6 class="dropdown-header">CYBRON ASSOCIATE CERTIFICATIONS</h6>
