--- a/10thgrade.html
+++ b/10thgrade.html
@@ -41,23 +41,23 @@
 }  .color-2{
     text-align:justify !important;
     font-size: 15px;
-  color:#8f8f8f !important;
+  color:#4d4d4d !important;
 }  .color-2{
     text-align:justify !important;
     font-size: 15px;
-  color:#8f8f8f !important;
+  color:#4d4d4d !important;
 }  .color-2{
     text-align:justify !important;
     font-size: 15px;
-  color:#8f8f8f !important;
+  color:#4d4d4d !important;
 }  .color-2{
     text-align:justify !important;
     font-size: 15px;
-  color:#8f8f8f !important;
+  color:#4d4d4d !important;
 }  .color-2{
     text-align:justify !important;
     font-size: 15px;
-  color:#8f8f8f !important;
+  color:#4d4d4d !important;
 }
     @keyframes progressAnimation {
       from {
@@ -433,7 +433,7 @@ Home / Cybron Scout Grade 10 Certification</h5>
               Cybron Scout <span class="col-org">Grade 10 Standard Certification</span>
             </h3>
             <p class="col-text">
-              Cybron is the program which develop your skills in the field of cyber security. The platform provides you the top-notch literature and help you to meet your targets & goals in global world. As everything of your life is associated with the digital world and due to this you are using the different devices and technology. As you are getting so much benefits from the digital association, there are other risk and challenges, which is one of them is cyber securiy. The Cybron Scout of Grade 6 students is equipped you regarding cyber security and also make you understandable as well as cure and protection techniques about different attacks and threats. The most important part of this program that it will take you from the scratch and provide you the detailed knowledge and literature, which makes you more understandable about the cyber security.
+              Cybron is the program which develop your skills in the field of cyber security. The platform provides you the top-notch literature and help you to meet your targets & goals in global world. As everything of your life is associated with the digital world and due to this you are using the different devices and technology. As you are getting so much benefits from the digital association, there are other risk and challenges, which is one of them is cyber securiy. The Cybron Scout of Grade 10 students is equipped you regarding cyber security and also make you understandable as well as cure and protection techniques about different attacks and threats. The most important part of this program that it will take you from the scratch and provide you the detailed knowledge and literature, which makes you more understandable about the cyber security.
             </p>
 <div class="my-3"></div>
             <div class="mb-3">
@@ -479,7 +479,7 @@ Home / Cybron Scout Grade 10 Certification</h5>
     </div>
     
      <p class="color-2 pt-3 text-justify1 text-justify">
-      In today’s rapidly evolving digital landscape, information security threats are growing in complexity and frequency. To stay ahead of these challenges, it is crucial to implement and manage robust information security systems and practices. Becoming a Cybron Scout Grade 6 empowers you to do just that by equipping you with the necessary knowledge and skills to tackle modern security threats effectively. 
+      In today’s rapidly evolving digital landscape, information security threats are growing in complexity and frequency. To stay ahead of these challenges, it is crucial to implement and manage robust information security systems and practices. Becoming a Cybron Scout Grade 10 empowers you to do just that by equipping you with the necessary knowledge and skills to tackle modern security threats effectively. 
 </p>
 <!--  -->
 
@@ -610,6 +610,7 @@ The digital world faces constant risks that require skilled professionals to mit
    <h5 class="col-org">Assessment and program</h5>
   </div>
    <p class="color-2 pt-3">
+    <span class="">1. 	The paper will be open book and student can give the answers according to scenario including practical and theory.  </span><br>
    <span class="">2. 	The paper will be online including practical and theory.  </span>
     <br><span class="">3.	The weightage of examination will be 70% practical, and 30% theoretical.</span>
     <br><span class="">4. 	Practical assessment will be taken in labs assess by internal examiners, where theory paper will be taken through online or paper based (if online facility not available)   </span>
@@ -638,7 +639,7 @@ The digital world faces constant risks that require skilled professionals to mit
     </thead>
     <tbody>
       <tr>
-        <td>No Educational Background Required 	Must be earned from our any partner institute about 2 Credit hours </td>
+        <td>No Educational Background Required 	 </td>
         <td>Must be earned from our any partner institute about 2 Credit hours  </td>
       </tr>
   
@@ -689,13 +690,13 @@ The digital world faces constant risks that require skilled professionals to mit
     <p>Final Assessment                                    : <span class="fw-normal text-dark">Online or physical assessment can be taken </span></p>
 
   </div>
-  <div class="mb-3 col-12 px-3  py-5 color-2 border border-2 shadow-lg rounded-3">
+    <div class="mb-3 col-12 px-3  py-5 color-2 border border-2 shadow-lg rounded-3">
 <div class="col-12 d-flex mb-2">
   <div class="col-1 me-3">
     <i class="fa-solid fa-shapes bg-col text-white fs-5 p-2 rounded-circle"></i>
   </div>
   <div class="col-11 d-flex flex-row align-items-center">
-    <a href="Get-Started/6thgrade.html" class="fs-6 text-decoration-none">
+    <a href="6thgrade.html" class="fs-6 text-decoration-none">
       Cybron Scout Grade 6 
     </a>
   </div>
@@ -706,7 +707,7 @@ The digital world faces constant risks that require skilled professionals to mit
     <i class="fa-solid fa-shapes bg-col text-white fs-5 p-2 rounded-circle"></i>
   </div>
   <div class="col-11 d-flex flex-row align-items-center">
-    <a href="Get-Started/7thgrade.html" class="fs-6 text-decoration-none">
+    <a href="7thgrade.html" class="fs-6 text-decoration-none">
       Cybron Scout Grade 7 
     </a>
   </div>
@@ -716,27 +717,40 @@ The digital world faces constant risks that require skilled professionals to mit
     <i class="fa-solid fa-shapes bg-col text-white fs-5 p-2 rounded-circle"></i>
   </div>
   <div class="col-11 d-flex flex-row align-items-center">
-    <a href="Get-Started/8thgrade.html" class="fs-6 text-decoration-none">
+    <a href="8thgrade.html" class="fs-6 text-decoration-none">
       Cybron Scout Grade 8 
     </a>
   </div>
 
-</div><div class="col-12 d-flex mb-2">
+</div>
+<div class="col-12 d-flex mb-2">
   <div class="col-1 me-3">
     <i class="fa-solid fa-shapes bg-col text-white fs-5 p-2 rounded-circle"></i>
   </div>
   <div class="col-11 d-flex flex-row align-items-center">
-    <a href="Get-Started/9thgrade.html" class="fs-6 text-decoration-none">
+    <a href="9thgrade.html" class="fs-6 text-decoration-none">
       Cybron Scout Grade 9 
     </a>
   </div>
 
-</div><div class="col-12 d-flex mb-2">
+</div>
+<div class="col-12 d-flex mb-2">
   <div class="col-1 me-3">
     <i class="fa-solid fa-shapes bg-col text-white fs-5 p-2 rounded-circle"></i>
   </div>
   <div class="col-11 d-flex flex-row align-items-center">
-    <a href="Get-Started/diploma.html" class="fs-6 text-decoration-none">
+    <a href="10thgrade.html" class="fs-6 text-decoration-none">
+      Cybron Scout Grade 10 
+    </a>
+  </div>
+
+</div>
+<div class="col-12 d-flex mb-2">
+  <div class="col-1 me-3">
+    <i class="fa-solid fa-shapes bg-col text-white fs-5 p-2 rounded-circle"></i>
+  </div>
+  <div class="col-11 d-flex flex-row align-items-center">
+    <a href="diploma.html" class="fs-6 text-decoration-none">
       Cybron Diploma 
     </a>
   </div>
@@ -744,11 +758,11 @@ The digital world faces constant risks that require skilled professionals to mit
 </div>
 </div>
 <!--  -->
-  <div class="col-12">
+   <div class="col-12">
     <button
-    class="mt-3 btn3 col-lg-7 mx-auto col-6 p-2 d-flex flex-row align-items-center justify-content-center fw-bold">
-    <a href="cybron-scout-class-6-standard.docx"  download="cybron-scout-class-6-standard.docx" class="col-12 text-decoration-none">
-Download Grade 6 Scout
+    class="mt-3 btn3 col-lg-10 mx-auto col-10 p-2 d-flex flex-row align-items-center justify-content-center fw-bold">
+    <a href="cybron-scout-class-10-standard.docx"  download="cybron-scout-class-10-standard.docx" class="col-12 text-decoration-none ">
+Download Grade 10 Scout brochure
   <i class="fa-solid fa-download icon-hover col-lg-12">
 
   </i>
@@ -758,7 +772,7 @@ Download Grade 6 Scout
   <div class="mb-3 col-12 px-3  py-5 color-2 border border-2 shadow-lg rounded-3">
     <div class="col-12 d-flex flex-column mb-3">
       
-        <h6 class="fw-normal pb-2 pt-1 text-dark text-center">Cyber Scout 6 Grade</h6>
+        <h6 class="fw-normal pb-2 pt-1 text-dark text-center">Cyber Scout 10 Grade</h6>
         <ul>
           <li>Available in self-study format</li>
           <li>Available in eLearning format</li>
