--- a/offensive.html
+++ b/offensive.html
@@ -676,13 +676,13 @@ The digital world faces constant risks that require skilled professionals to mit
     <p>Final Assessment                                    : <span class="fw-normal text-dark">Online or physical assessment can be taken </span></p>
 
   </div>
-  <div class="mb-3 col-12 px-3  py-5 color-2 border border-2 shadow-lg rounded-3">
+    <div class="mb-3 col-12 px-3  py-5 color-2 border border-2 shadow-lg rounded-3">
 <div class="col-12 d-flex mb-2">
   <div class="col-1 me-3">
     <i class="fa-solid fa-shapes bg-col text-white fs-5 p-2 rounded-circle"></i>
   </div>
   <div class="col-11 d-flex flex-row align-items-center">
-    <a href="Get-Started/6thgrade.html" class="fs-6 text-decoration-none">
+    <a href="6thgrade.html" class="fs-6 text-decoration-none">
       Cybron Scout Grade 6 
     </a>
   </div>
@@ -693,7 +693,7 @@ The digital world faces constant risks that require skilled professionals to mit
     <i class="fa-solid fa-shapes bg-col text-white fs-5 p-2 rounded-circle"></i>
   </div>
   <div class="col-11 d-flex flex-row align-items-center">
-    <a href="Get-Started/7thgrade.html" class="fs-6 text-decoration-none">
+    <a href="7thgrade.html" class="fs-6 text-decoration-none">
       Cybron Scout Grade 7 
     </a>
   </div>
@@ -703,27 +703,40 @@ The digital world faces constant risks that require skilled professionals to mit
     <i class="fa-solid fa-shapes bg-col text-white fs-5 p-2 rounded-circle"></i>
   </div>
   <div class="col-11 d-flex flex-row align-items-center">
-    <a href="Get-Started/8thgrade.html" class="fs-6 text-decoration-none">
+    <a href="8thgrade.html" class="fs-6 text-decoration-none">
       Cybron Scout Grade 8 
     </a>
   </div>
 
-</div><div class="col-12 d-flex mb-2">
+</div>
+<div class="col-12 d-flex mb-2">
   <div class="col-1 me-3">
     <i class="fa-solid fa-shapes bg-col text-white fs-5 p-2 rounded-circle"></i>
   </div>
   <div class="col-11 d-flex flex-row align-items-center">
-    <a href="Get-Started/9thgrade.html" class="fs-6 text-decoration-none">
+    <a href="9thgrade.html" class="fs-6 text-decoration-none">
       Cybron Scout Grade 9 
     </a>
   </div>
 
-</div><div class="col-12 d-flex mb-2">
+</div>
+<div class="col-12 d-flex mb-2">
   <div class="col-1 me-3">
     <i class="fa-solid fa-shapes bg-col text-white fs-5 p-2 rounded-circle"></i>
   </div>
   <div class="col-11 d-flex flex-row align-items-center">
-    <a href="Get-Started/diploma.html" class="fs-6 text-decoration-none">
+    <a href="10thgrade.html" class="fs-6 text-decoration-none">
+      Cybron Scout Grade 10 
+    </a>
+  </div>
+
+</div>
+<div class="col-12 d-flex mb-2">
+  <div class="col-1 me-3">
+    <i class="fa-solid fa-shapes bg-col text-white fs-5 p-2 rounded-circle"></i>
+  </div>
+  <div class="col-11 d-flex flex-row align-items-center">
+    <a href="diploma.html" class="fs-6 text-decoration-none">
       Cybron Diploma 
     </a>
   </div>
@@ -731,11 +744,11 @@ The digital world faces constant risks that require skilled professionals to mit
 </div>
 </div>
 <!--  -->
-  <div class="col-12">
+   <div class="col-12">
     <button
-    class="mt-3 btn3 col-lg-7 mx-auto col-6 p-2 d-flex flex-row align-items-center justify-content-center fw-bold">
-    <a href="cybron-scout-class-6-standard.docx"  download="cybron-scout-class-6-standard.docx" class="col-12 text-decoration-none">
-Download Grade 6 Scout
+    class="mt-3 btn3 col-lg-10 mx-auto col-10 p-2 d-flex flex-row align-items-center justify-content-center fw-bold">
+    <a href="cybron-scout-class-6-standard.docx"  download="cybron-scout-class-6-standard.docx" class="col-12 text-decoration-none ">
+Download Grade 6 Scout brochure
   <i class="fa-solid fa-download icon-hover col-lg-12">
 
   </i>
