--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
         <i class="fa-brands fa-linkedin text-white"></i>
       </a>
     </div>
-    <a href="#" class="topbtnfix">
-
-      <i class="fa-solid fa-arrow-up"></i>
+    <a href="#" class="topbtnfix text-decoration-none" id="fixee">
+0%
+      <!-- <i class="fa-solid fa-arrow-up"></i> -->
 
     </a>
   </div>
@@ -85,7 +85,7 @@
   <!-- NAVBAR -->
 
   <!-- NAVBAR -->
-  <nav class="navbar navbar-expand-lg px-0 py-0 container-fluid" id="navbar">
+  <nav class="navbar navbar-expand-lg px-0 py-0 container-fluid d-flex flex-column" id="navbar">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
         <img src="assets/logo.png" alt="" class="col-lg-6 col-5" /> <!-- Replace with actual logo path -->
@@ -219,6 +219,7 @@
         </form>
       </div>
     </div>
+    <div id="nav-width" class="text-dark"></div>
   </nav>
   <!-- NAVBAR -->
   <!-- OFFCANVAS -->
